[package]
name = "open_efi"
version = "4.0.0"
edition = "2021"
authors = ["Ramiro Bou <ramiro@churrosoft.ar>", "Diego Frenoux <diego@churrosoft.ar>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 's'
strip = true
lto = true
codegen-units = 1
panic = "abort"
incremental = false
debug = false

[profile.dev]
opt-level = 's'
codegen-units = 1
lto = false


[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.2"
cortex-m-rtic = "1.1.3"
cortex-m-semihosting = "0.5.0"
panic-halt = "0.2.0"
usb-device = "0.2.9"

arrayvec = { version = "0.7.2", default-features = false }
numtoa = "0.2"
usbd-serial = "0.1.1"
usbd-webusb = "1.0.2"
w25q = "0.2.1"
embedded-hal = "0.2.7"

[dependencies.stm32f4xx-hal]
version = "0.14.0"
features = ["stm32f407", "usb_fs", "rtic"]
