[package]
name = "open_efi"
version = "3.4.535"
edition = "2021"
authors = ["Ramiro Bou <ramiro@churrosoft.ar>", "Diego Frenoux <diego@churrosoft.ar>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 's'
strip = true
lto = true
codegen-units = 1
panic = "abort"
incremental = false
debug = true

[profile.dev]
opt-level = 's'
strip = true
debug = false
codegen-units = 1
lto = false


[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.2"
cortex-m-semihosting = "0.5.0"
embedded-hal = "0.2.7"
panic-halt = "0.2.0"
rtic-sync = "1.0.2"

arrayvec = { version = "0.7.2", default-features = false }
numtoa = "0.2"

usb-device = "0.2.9"
usbd-serial = "0.1.1"
usbd-webusb = "1.0.2"

w25q = "0.2.9"

serde = { version = "1.0.152", default-features = false, features = ["derive"] }
serde-json-core = "0.5.0"

postcard = "1.0.4"
micromath = "2.0.0"
shared-bus-rtic = "0.2.2"
#panic-semihosting = "0.6.0"


[dependencies.stm32f4xx-hal]
version = "0.14.0"
features = ["stm32f407", "usb_fs", "rtic"]

[dependencies.rtic]
version = "2.0.1"
features = ["thumbv7-backend"]

[dependencies.rtic-monotonics]
version = "1.1.0"
features = ["cortex-m-systick", "systick-10khz"]